fix some broken dependencies

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,11 @@ org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx2048M
 org.gradle.daemon=true
+
+zirconVersion=2019.0.4-PREVIEW
+amethystVersion=2018.1.0-PREVIEW
+junitVersion=4.12
+mockitoVersion=1.10.19
+assertjVersion=3.11.1
+slf4jVersion=1.7.25
+squidLibVersion=3.0.0-b9
