--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,15 @@ repositories {
 apply plugin: 'kotlin'
 apply plugin: 'application'
 apply plugin: "com.github.johnrengelman.shadow"
+apply plugin: "jacoco"
+
+jacocoTestReport {
+    reports {
+        xml.enabled false
+        csv.enabled false
+        html.destination file("${buildDir}/jacocoHtml")
+    }
+}
 
 mainClassName = 'com.jscisco.lom.MainKt'
 
