--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,10 @@
+apply plugin: 'kotlin'
+apply plugin: 'application'
+apply plugin: 'jacoco'
+
 group "com.jscisco.lom"
 version "0.0.1"
+
 
 buildscript {
     ext.kotlinVersion = "1.3.11"
@@ -11,38 +16,57 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
-        classpath "com.github.jengelman.gradle.plugins:shadow:4.0.2"
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.0'
     }
 }
 
-ext {
-
-    libraries = [
-            kotlin_stdlib   : "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion",
-            kotlin_reflect  : "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion",
-            amethyst        : "org.hexworks.amethyst:amethyst.core-jvm:$amethystVersion",
-            slf4j_api       : "org.slf4j:slf4j-api:$slf4jVersion",
-            slf4j_simple    : "org.slf4j:slf4j-simple:$slf4jVersion",
-            zircon_core_jvm : "org.hexworks.zircon:zircon.core-jvm:$zirconVersion",
-            zircon_jvm_swing: "org.hexworks.zircon:zircon.jvm.swing:$zirconVersion",
-            junit           : "junit:junit:$junitVersion",
-            mockito         : "org.mockito:mockito-all:$mockitoVersion",
-            assertj         : "org.assertj:assertj-core:$assertjVersion",
-            squidLib        : "com.squidpony:squidlib-util:$squidLibVersion"
-    ]
-}
-
 repositories {
-    mavenLocal()
     mavenCentral()
+    mavenLocal()
     jcenter()
+    maven { url "https://plugins.gradle.org/m2/" }
     maven { url 'https://jitpack.io' }
 }
 
-apply plugin: 'kotlin'
-apply plugin: 'application'
-apply plugin: "com.github.johnrengelman.shadow"
-apply plugin: "jacoco"
+dependencies {
+    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
+    compile "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
+
+
+    compile "org.slf4j:slf4j-api:$slf4jVersion"
+    compile "org.slf4j:slf4j-simple:$slf4jVersion"
+
+    compile "org.hexworks.amethyst:amethyst.core-jvm:$amethystVersion"
+
+    compile "org.hexworks.zircon:zircon.core-jvm:$zirconVersion"
+    compile "org.hexworks.zircon:zircon.jvm.swing:$zirconVersion"
+
+    compile "com.squidpony:squidlib-util:$squidLibVersion"
+
+    testCompile "org.junit.jupiter:junit-jupiter-api:$junitVersion"
+    testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
+    testCompile "org.mockito:mockito-all:$mockitoVersion"
+    testCompile "org.assertj:assertj-core:$assertjVersion"
+
+    testRuntime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+}
+
+sourceSets {
+    main.java.srcDirs += 'src/main/kotlin'
+    test.java.srcDirs += 'src/test/kotlin'
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.jscisco.lom.MainKt'
+    }
+    baseName = project.name + '-all'
+    // This line recursively collects and copies all of a project's files
+    // and adds them to the JAR itself. One can extend this task to skip files or types
+    // at will
+    from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
+}
+
 
 jacocoTestReport {
     reports {
@@ -54,52 +78,14 @@ jacocoTestReport {
 
 mainClassName = 'com.jscisco.lom.MainKt'
 
-
-configurations {
-    shadow
-    compile.extendsFrom provided
-    provided.extendsFrom shadow
-}
-
-shadowJar {
-    classifier = null
-    version = version
-}
-
-artifacts {
-    archives shadowJar
-}
-
-jar {
-    manifest {
-        attributes 'Main-Class': "com.jscisco.lom.MainKt"
-    }
-}
-
-build.dependsOn(shadowJar)
-
-dependencies {
-    compile libraries.kotlin_stdlib
-    compile libraries.kotlin_reflect
-
-    compile libraries.amethyst
-
-    compile libraries.slf4j_api
-    compile libraries.slf4j_simple
-
-    compile libraries.zircon_core_jvm
-    compile libraries.zircon_jvm_swing
-
-    compile libraries.squidLib
-
-    testCompile libraries.junit
-    testCompile libraries.mockito
-    testCompile libraries.assertj
-}
-
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions {
         jvmTarget = "1.8"
     }
 }
 
+tasks.withType(Test) {
+    testLogging {
+        events("passed", "skipped", "failed")
+    }
+}
