--- a/gradle.properties
+++ b/gradle.properties
@@ -5,6 +5,7 @@ org.gradle.daemon=true
 
 zirconVersion=2019.0.9-PREVIEW
 amethystVersion=2019.0.1-PREVIEW
+cobaltVersion=2018.1.1-PREVIEW
 junitVersion=5.3.2
 mockitoVersion=1.10.19
 assertjVersion=3.11.1
