--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ dependencies {
 
     testCompile "org.junit.jupiter:junit-jupiter-api:$junitVersion"
     testCompile "org.junit.jupiter:junit-jupiter-params:$junitVersion"
-    testCompile "org.mockito:mockito-all:$mockitoVersion"
+    testImplementation "io.mockk:mockk:$mockkVersion"
     testCompile "org.assertj:assertj-core:$assertjVersion"
 
     testRuntime "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
