--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ zirconVersion=2019.0.9-PREVIEW
 amethystVersion=2019.0.2-PREVIEW
 cobaltVersion=2018.1.1-PREVIEW
 junitVersion=5.3.2
-mockitoVersion=1.10.19
+mockkVersion=1.9
 assertjVersion=3.11.1
 slf4jVersion=1.7.25
 squidLibVersion=3.0.0-b9
