--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,9 @@ dependencies {
 
     compile "org.hexworks.cobalt:cobalt.logging:$cobaltVersion"
 
+    //artemis-odb
+    compile "net.onedaybeard.artemis:artemis-odb:$artemisVersion"
+
     compile "com.squidpony:squidlib-util:$squidLibVersion"
 
     testCompile "org.junit.jupiter:junit-jupiter-api:$junitVersion"
