adding back amethyst to not reinvent the wheel

--- a/build.gradle
+++ b/build.gradle
@@ -38,11 +38,13 @@ dependencies {
 
 
     compile "org.slf4j:slf4j-api:$slf4jVersion"
-    
+
     compile "org.hexworks.zircon:zircon.core-jvm:$zirconVersion"
     compile "org.hexworks.zircon:zircon.jvm.swing:$zirconVersion"
 
     compile "org.hexworks.cobalt:cobalt.logging:$cobaltVersion"
+
+    compile "org.hexworks.amethyst:amethyst.core-jvm:$amethystVersion"
 
     compile "com.squidpony:squidlib-util:$squidLibVersion"
 
