--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,9 @@ org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx2048M
 org.gradle.daemon=true
 
-zirconVersion=2019.0.14-PREVIEW
-cobaltVersion=2018.1.1-PREVIEW
+zirconVersion=2019.1.1-PREVIEW
+cobaltVersion=2019.1.0-PREVIEW
+amethystVersion=2019.1.0-PREVIEW
 junitVersion=5.3.2
 mockkVersion=1.9
 assertjVersion=3.11.1
